--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
    height: 100%;
    width: 100%;
    background-color: white;
-   color: black;
+   color: #323232;
    font-family: "Oxygen", sans-serif;
    overflow-x: hidden;
 }
