--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-
-.parent-container{
-   display: flex;
-   flex: 1;
-   height: 100%;
-   width: 100%;
-   background-color: white;
-   color: #323232;
-   font-family: "Oxygen", sans-serif;
-   overflow-x: hidden;
+.parent-container {
+  display: flex;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  color: #323232;
+  font-family: "Oxygen", sans-serif;
+  overflow-x: hidden;
 }
 
+.font_sansita {
+  font-family: "Sansita", sans-serif;
+}
 
-.font_sansita{
-    font-family: "Sansita", sans-serif;
+html {
+  overflow-y: scroll !important;
+}
+
+.modal-wrapper {
+  display: none; /* Initially hide the modal */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+  z-index: 1000;
+}
+
+.modal-wrapper.show {
+  display: flex; /* Show the modal when the "show" class is added */
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-container {
+  /* Add your desired styles for the modal container here */
+
+  animation: modal-pop-up 0.3s ease-in-out; /* Animation duration and timing function */
+}
+
+@keyframes modal-pop-up {
+  from {
+    transform: scale(0.8); /* Initial scale of the modal */
+  }
+  to {
+    transform: scale(1); /* Final scale of the modal */
+  }
 }
