--- a/src/index.css
+++ b/src/index.css
@@ -53,65 +53,56 @@ html {
   }
 }
 
-/* Custom scrollbar */
 ::-webkit-scrollbar {
-  width: 7px; /* Width of the scrollbar */
+  width: 7px;
   height: 7px;
 }
 
-/* Track (the area on which the thumb scrolls) */
 ::-webkit-scrollbar-track {
-  background: #ffffff; /* Color of the scrollbar track */
+  background: #ffffff;
 }
 
-/* Handle (the draggable part of the scrollbar) */
 ::-webkit-scrollbar-thumb {
-  background: #cacaca; /* Color of the scrollbar handle */
-
+  background: #cacaca;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #c4c4c4; /* Color of the scrollbar handle on hover */
+  background: #c4c4c4;
 }
 
+html {
+  scrollbar-color: #cacaca #ffffff;
+  scrollbar-width: thin;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #cacaca;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #c4c4c4;
+}
 
 button {
   cursor: pointer;
   position: relative;
-
   transition: 0.2s;
-  &::before {
-    content: '';
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: 0;
-    position: absolute;
-
-    transition: 0.4s;
-  }
-  &:hover {
-    &::before {
-      width: 100%;
-    }
-  }
-  &:active {
-      background-color: rgba(255,255,255,.1);
-  }
 }
 
-span.ripple {
-  background-color: rgb(197, 168, 5);
-  border-radius: 50%;
+button::before {
+  content: "";
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: 0;
   position: absolute;
-  transform: scale(0);
-  animation: ripple .5s linear forwards;
+  transition: 0.4s;
 }
 
-@keyframes ripple {
-  to {
-    transform: scale(1);
-    opacity: 0;
-  }
+button:hover::before {
+  width: 100%;
+}
+
+button:active {
+  background-color: rgba(255, 255, 255, 0.1);
 }
