--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,38 @@ html {
   }
 }
 
+.menu-wrapper {
+  display: none; /* Initially hide the modal */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1); /* Semi-transparent black background */
+  z-index: 1000;
+}
+
+.menu-wrapper.show {
+  display: flex; /* Show the modal when the "show" class is added */
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-container {
+  /* Add your desired styles for the modal container here */
+
+  animation: modal-pop-up 0.3s ease-in-out; /* Animation duration and timing function */
+}
+
+@keyframes modal-pop-up {
+  from {
+    transform: scale(0.8); /* Initial scale of the modal */
+  }
+  to {
+    transform: scale(1); /* Final scale of the modal */
+  }
+}
+
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
